--- a/src/styles/Friends.css
+++ b/src/styles/Friends.css
@@ -12,7 +12,7 @@
 
 .friends-list {
     height: calc(100vh - 160px);
-    overflow-y: scroll !important;
+    overflow-y: overlay !important;
 }
 
 .friend-item {
